--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@
 ###################
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
-# spring.ai.openai.chat.options.model=gpt-3.5-turbo
-spring.ai.openai.chat.options.model=gpt-4-turbo-preview
+#For TAS Dhaka (very slow and doesn't seem to work 100% with context
+spring.ai.openai.chat.options.model=gpt-3.5-turbo
+# For localhost against ChatGPT
+#spring.ai.openai.chat.options.model=gpt-4-turbo-preview
 spring.ai.openai.chat.options.functions=getBookingDetails,changeBooking,cancelBooking
 
 # spring.ai.openai.chat.enabled=false
